Many bug fixes and adjustments
Fix search regression
Remove shortcuts-label, shortcuts-display, hide-shortcuts, hide-
useroptions
Remove category-selection-method
Remove category-hover-delay setting
Remove hide-categories setting
Fix grid column classes
Comment St.Scrollview constraint
Fix grid items getting cut off near the end
Fix schema for apps-grid-column-count
Refactor _displayApplications method
Merge AppListButton and AppGridButton
Use all app metadata in search, but prioritize the name in the order
Clean up supporting files

--- a/Cinnamenu@json/files/Cinnamenu@json/stylesheet.css
+++ b/Cinnamenu@json/files/Cinnamenu@json/stylesheet.css
@@ -1,13 +1,12 @@
-/* Needed to prevent bookmarks from being invisible. */
-
 .cinnamenu-menu-top-pane {
     spacing: 15px; }
+
+/* Needed to prevent bookmarks from being invisible. */
 
 .cinnamenu-categories-workspaces-scrollbox {
     border-radius: 0 4px 0 0;
     border-width: 1px;
     border-left: 0;
-    height: 412px;
     padding: 0 }
 
 /* List box */
